--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,11 +15,12 @@ repos:
       args: ["--profile", "black"]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v1.4.1
     hooks:
     - id: mypy
       name: mypy-fv3core
       args: [--config-file, setup.cfg]
+      additional_dependencies: [types-PyYAML]
       files: pyFV3
       exclude: |
         (?x)^(
