--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -1,5 +1,6 @@
 name: "Translate test (subset)"
 on:
+  push:
   pull_request:
       types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
@@ -81,5 +82,30 @@ jobs:
               -m parallel \
               --which_rank=0 \
               --which_modules=DynCore \
+              --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+              ./tests/savepoint
+        - name: Orchestrated dace:cpu FvTp2d
+          run: |
+            pytest \
+              -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+              --backend=dace:cpu \
+              --which_modules=FvTp2d \
+              --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+              ./tests/savepoint
+        - name: Orchestrated dace:cpu D_SW
+          run: |
+            pytest \
+              -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+              --backend=dace:cpu \
+              --which_modules=D_SW \
+              --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
+              ./tests/savepoint
+        - name: Orchestrated dace:cpu Remapping 
+          run: |
+            export FV3_DACEMODE=BuildAndRun
+            pytest \
+              -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
+              --backend=dace:cpu \
+              --which_modules=Remapping \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
