--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -86,6 +86,7 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu FvTp2d
           run: |
+            export FV3_DACEMODE=BuildAndRun
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
@@ -94,6 +95,7 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu D_SW
           run: |
+            export FV3_DACEMODE=BuildAndRun
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
