--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -86,7 +86,15 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu FvTp2d
           run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
+            cd -
             export FV3_DACEMODE=BuildAndRun
+            export PACE_FLOAT_PRECISION=64
+            export PACE_TEST_N_THRESHOLD_SAMPLES=0
+            export OMP_NUM_THREADS=1
+            export PACE_LOGLEVEL=Debug
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
@@ -95,7 +103,15 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu D_SW
           run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.D_SW.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.D_SW.tar.gz
+            cd -
             export FV3_DACEMODE=BuildAndRun
+            export PACE_FLOAT_PRECISION=64
+            export PACE_TEST_N_THRESHOLD_SAMPLES=0
+            export OMP_NUM_THREADS=1
+            export PACE_LOGLEVEL=Debug
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
@@ -104,7 +120,15 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu Remapping
           run: |
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.Remapping.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.Remapping.tar.gz
+            cd -
             export FV3_DACEMODE=BuildAndRun
+            export PACE_FLOAT_PRECISION=64
+            export PACE_TEST_N_THRESHOLD_SAMPLES=0
+            export OMP_NUM_THREADS=1
+            export PACE_LOGLEVEL=Debug
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
