--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -86,10 +86,7 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu FvTp2d
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
-            cd -
+            rm -rf .gt_cache_FV3_A
             export FV3_DACEMODE=BuildAndRun
             export PACE_FLOAT_PRECISION=64
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
@@ -103,10 +100,7 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu D_SW
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.D_SW.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.D_SW.tar.gz
-            cd -
+            rm -rf .gt_cache_FV3_A
             export FV3_DACEMODE=BuildAndRun
             export PACE_FLOAT_PRECISION=64
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
@@ -120,10 +114,7 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu Remapping
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.Remapping.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.Remapping.tar.gz
-            cd -
+            rm -rf .gt_cache_FV3_A
             export FV3_DACEMODE=BuildAndRun
             export PACE_FLOAT_PRECISION=64
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
