--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -35,7 +35,7 @@ jobs:
             wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
             tar -xzvf 8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
             cd -
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
               --which_modules=FvTp2d \
@@ -47,7 +47,7 @@ jobs:
             wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.D_SW.tar.gz
             tar -xzvf 8.1.3_c12_6ranks_standard.D_SW.tar.gz
             cd -
-            pytest \
+              coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
               --which_modules=D_SW \
@@ -76,7 +76,7 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            mpirun -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe pytest \
+            mpirun -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe coverage run --rcfile=setup.cfg -m mpi4py -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               -m parallel \
@@ -92,7 +92,7 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               --which_modules=FvTp2d \
@@ -106,7 +106,7 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               --which_modules=D_SW \
@@ -120,9 +120,13 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               --which_modules=Remapping \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
+        - name: Output code coverage
+          run: |
+            coverage combine
+            coverage report
