--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -95,6 +95,7 @@ jobs:
             coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
+              --which_rank=0 \
               --which_modules=FvTp2d \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
@@ -109,6 +110,7 @@ jobs:
             coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
+              --which_rank=0 \
               --which_modules=D_SW \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
@@ -123,6 +125,7 @@ jobs:
             coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
+              --which_rank=0 \
               --which_modules=Remapping \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
