--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -28,12 +28,12 @@ jobs:
         - name: Prepare test_data
           run: |
             mkdir -p test_data
+            cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.tar.gz
+            tar -xzvf 8.1.3_c12_6ranks_standard.tar.gz
+            cd -
         - name: Numpy FvTp2d
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
-            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -42,10 +42,6 @@ jobs:
               ./tests/savepoint
         - name: Numpy D_SW
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.D_SW.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.D_SW.tar.gz
-            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -54,10 +50,6 @@ jobs:
               ./tests/savepoint
         - name: Numpy Remapping
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.Remapping.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.Remapping.tar.gz
-            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -66,10 +58,6 @@ jobs:
               ./tests/savepoint
         - name: Orchestrated dace:cpu Acoustics
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.DynCore.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.DynCore.tar.gz
-            cd -
             export FV3_DACEMODE=BuildAndRun
             export PACE_FLOAT_PRECISION=64
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
