--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -35,7 +35,7 @@ jobs:
             cd -
         - name: Numpy FvTp2d
           run: |
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
               --which_modules=FvTp2d \
@@ -43,7 +43,7 @@ jobs:
               ./tests/savepoint
         - name: Numpy D_SW
           run: |
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
               --which_modules=D_SW \
@@ -51,7 +51,7 @@ jobs:
               ./tests/savepoint
         - name: Numpy Remapping
           run: |
-            pytest \
+            coverage run --rcfile=setup.cfg -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
               --which_modules=Remapping \
@@ -64,7 +64,8 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            mpirun -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe pytest \
+            mpirun -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe \
+            coverage run --rcfile=setup.cfg -m mpi4py -m pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               -m parallel \
@@ -72,3 +73,8 @@ jobs:
               --which_modules=DynCore \
               --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
               ./tests/savepoint
+
+        - name: Output code coverage
+          run: |
+            coverage combine
+            coverage report
