--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -1,39 +1,31 @@
 name: "Translate test (subset)"
 on:
+  push:
   pull_request:
       types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
 jobs:
   all:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.8.12, 3.11.7]
+    container:
+      image: ghcr.io/noaa-gfdl/miniforge:mpich
     steps:
-        - name: Checkout repository
+      - name: Checkout repository
           uses: actions/checkout@v3.5.2
           with:
             submodules: 'recursive'
-        - name: Setup Python
-          uses: actions/setup-python@v4.6.0
-          with:
-            python-version: ${{ matrix.python }}
-        - name: Install OpenMPI & Boost for gt4py
-          run: |
-            sudo apt-get install libopenmpi-dev libboost1.74-dev
         - name: Install Python packages
           run: |
             python -m pip install --upgrade pip setuptools wheel
             pip install .[ndsl,test]
         - name: Prepare test_data
           run: |
-            mkdir -p test_data
-        - name: Numpy FvTp2d
+            mkdir -p test_data  && cd test_data
+            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.tar.gz \
+            tar -xzvf  8.1.3_c12_6ranks_standard.tar.gz --no-same-owner
+            cd ..            
+       - name: Numpy FvTp2d
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.FvTp2d.tar.gz
-            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -42,10 +34,6 @@ jobs:
               ./tests/savepoint
         - name: Numpy D_SW
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.D_SW.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.D_SW.tar.gz
-            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -54,10 +42,6 @@ jobs:
               ./tests/savepoint
         - name: Numpy Remapping
           run: |
-            cd test_data
-            wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.Remapping.tar.gz
-            tar -xzvf 8.1.3_c12_6ranks_standard.Remapping.tar.gz
-            cd -
             pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=numpy \
@@ -75,7 +59,7 @@ jobs:
             export PACE_TEST_N_THRESHOLD_SAMPLES=0
             export OMP_NUM_THREADS=1
             export PACE_LOGLEVEL=Debug
-            mpirun -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe pytest \
+            mpiexec -mca orte_abort_on_non_zero_status 1 -np 6 --oversubscribe pytest \
               -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
               --backend=dace:cpu \
               -m parallel \
