--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -1,8 +1,6 @@
 name: "Translate test (subset)"
 on:
-  push:
-  pull_request:
-      types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
+  [push, pull_request]
 
 # cancel running jobs if theres a newer push
 concurrency:
