--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -1,5 +1,6 @@
 name: "Translate test (subset)"
 on:
+  workflow_call:
   push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
