--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -1,6 +1,10 @@
 name: "Translate test (subset)"
 on:
   workflow_call:
+    inputs:
+      ndsl_hash:
+        default: 'NONE'
+        required: false
   push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
@@ -25,6 +29,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install .[ndsl,test]
+      - name: checkout NDSL hash to be tested
+        if: ${{ on.workflow_call.ndsl_hash != 'NONE'}}
+        run: cd NDSL && checkout ${{on.workflow_call.ndsl_hash}} && cd ..
       - name: Prepare test_data
         run: |
           mkdir -p test_data  && cd test_data
