--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -30,7 +30,7 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install .[ndsl,test]
       - name: checkout NDSL hash to be tested
-        if: ${{ on.workflow_call.ndsl_hash != 'NONE'}}
+        if: ${on.workflow_call.ndsl_hash} != 'NONE'
         run: cd NDSL && checkout ${{on.workflow_call.ndsl_hash}} && cd ..
       - name: Prepare test_data
         run: |
