--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -31,8 +31,10 @@ jobs:
           python -m pip install --upgrade pip setuptools wheel
           pip install .[ndsl,test]
       - name: checkout NDSL hash to be tested
-        if: ${{inputs.ndsl_hash}} != 'NONE'
-        run: cd NDSL && checkout ${{inputs.ndsl_hash}} && cd ..
+        if: ${{inputs.ndsl_hash != 'NONE'}}        
+        run: |
+          echo ${{inputs.ndsl_hash}}
+          #cd NDSL && checkout ${{inputs.ndsl_hash}} && cd ..
       - name: Prepare test_data
         run: |
           mkdir -p test_data  && cd test_data
