--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,6 @@ jobs:
       - name: checkout NDSL hash to be tested
         if: ${{inputs.ndsl_hash != 'NONE'}}        
         run: |
+          echo "test"
           echo ${{inputs.ndsl_hash}}
 
