--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
         if: ${{inputs.ndsl_hash != 'NONE'}}        
         run: |
           echo "test"
-          echo ${{inputs.ndsl_hash}}
+          echo `${{inputs.ndsl_hash}}`
 
