--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout NDSL hash to be tested
-        if: ${{ ! contains( ${{inputs.ndsl_hash}}, "None" ) }}
+        if: ${{ ! contains( inputs.ndsl_hash, "None" ) }}
         run: |
           echo "test"
 
