--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,9 +10,6 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
-env:
-  test_variable : TEST_VARIABLE
-
 # cancel running jobs if theres a newer push
 concurrency:
   group: ${{github.workflow }}-${{ github.ref }}
@@ -23,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout NDSL hash to be tested
-        if: ${{ ! contains( inputs.ndsl_hash, 'None' ) }}
+        if: ${{ contains( inputs.ndsl_hash, 'None' ) }}
         run: |
           echo "test"
 
