--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
     inputs:
       ndsl_hash:
         type: string
-        default: 'None'
+        default: 'NOHASH'
         required: false
   push:
   pull_request:
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout NDSL hash to be tested
-        if: ${{ contains( inputs.ndsl_hash, 'None' ) }}
+        if: ${{ contains( inputs.ndsl_hash, 'NOHASH' ) }}
         run: |
           echo "test"
 
