--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -4,8 +4,9 @@ on:
     inputs:
       ndsl_hash:
         type: string
-        default: 'NONE'
+        default: ''
         required: false
+  push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
@@ -25,14 +26,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+      - name: checkout NDSL hash to be tested
+        if: ${{github.event_name == 'workflow_call'}}
+        run: sed -i "s/NDSL\.git\@2024\.04\.00/${ndsl_hash}/" setup.py
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install .[ndsl,test]
-      - name: checkout NDSL hash to be tested
-        if: ${{ ! contains(inputs.ndsl_hash, 'NONE') }}        
-        run: |
-          cd NDSL && checkout ${{inputs.ndsl_hash}} && cd ..
       - name: Prepare test_data
         run: |
           mkdir -p test_data  && cd test_data
