--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -22,9 +22,15 @@ jobs:
     container:
       image: ghcr.io/noaa-gfdl/miniforge:mpich
     steps:
-      - name: Checkout repository
+      - name: Checkout repository for workflow_call
+        if: ${{github.event_name == 'workflow_call'}}
         uses: actions/checkout@v4
-        repository: noaa-gfdl/pyFV3
+        with:
+          submodules: 'recursive'
+          repository: noaa-gfdl/pyFV3
+      - name: Checkout repository for not workflow call
+        if: ${{ github.event_name != 'workflow_call' }}
+        uses: actions/checkout@v4
         with:
           submodules: 'recursive'
       - name: checkout NDSL hash to be tested
