--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -25,24 +25,21 @@ jobs:
       image: ghcr.io/noaa-gfdl/miniforge:mpich
     steps:
 
-      - name: Checkout repository for workflow_call
+      - name: Checkout pyFV3 if part of NDSL workflow
         if: ${{inputs.ndsl_trigger}}
-        uses: actions/checkout@v4
-        with:
-          repository: 'noaa-gfdl/pyFV3'
-          submodules: 'recursive'
-          path:  ./pyFV3_develop
+        run:  git clone --recursive https://github.com/NOAA-GFDL/pyFV3.git && cd pyFV3
 
       - name: Checkout either pyFV3 (!workflow_call) or NDSL (workflow_call)
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+          path: .
 
       - name: install packages to test NDSL in pyFV3
         if: ${{inputs.ndsl_trigger}}
         run:  |
           echo $PWD && ls
-          pip3 install . && cd ..
+          cd NDSL && pip3 install . && cd ..
           echo $PWD && ls
           pip3 install .[test]
 
