--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -37,30 +37,32 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          path: my_repo
+          path: ${{github.event.repository.name}}
 
       - name: Checkout pyFV3 if part of NDSL workflow
         if: ${{inputs.ndsl_trigger}}
         run:  |
           cd ${GITHUB_WORKSPACE}
-          ls
-          mv my_repo pyFV3/NDSL
-          cd pyFV3
+          mv NDSL pyFV3/NDSL
 
       - name: install packages to test NDSL in pyFV3
         if: ${{inputs.ndsl_trigger}}
         run:  |
-          echo $PWD && ls
+          cd ${GITHUB_WORKSPACE}/pyFV3
           cd NDSL && pip3 install . && cd ..
           echo $PWD && ls
           pip3 install .[test]
 
       - name: Install packages to test only pyFV3
         if: ${{ ! inputs.ndsl_trigger }}
-        run : pip install .[ndsl,test]
+        run : |
+          cd ${GITHUB_WORKSPACE}/pyFV3
+          pip install .[ndsl,test]
+
 
       - name: Prepare test_data
         run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
           mkdir -p test_data  && cd test_data
           wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.tar.gz
           tar -xzvf  8.1.3_c12_6ranks_standard.tar.gz --no-same-owner
@@ -68,6 +70,7 @@ jobs:
 
       - name: Numpy FvTp2d
         run: |
+         cd ${GITHUB_WORKSPACE}/pyFV3
           pytest \
             -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
             --backend=numpy \
@@ -77,7 +80,8 @@ jobs:
 
       - name: Numpy D_SW
         run: |
-          pytest \
+         cd ${GITHUB_WORKSPACE}/pyFV3
+         pytest \
             -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
             --backend=numpy \
             --which_modules=D_SW \
@@ -86,6 +90,7 @@ jobs:
 
       - name: Numpy Remapping
         run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
           pytest \
             -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
             --backend=numpy \
@@ -94,6 +99,7 @@ jobs:
             ./tests/savepoint
       - name: Orchestrated dace-cpu Acoustics
         run: |
+          cd ${GITHUB_WORKSPACE}/pyFV3
           export FV3_DACEMODE=BuildAndRun
           export PACE_FLOAT_PRECISION=64
           export PACE_TEST_N_THRESHOLD_SAMPLES=0
