--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -10,6 +10,7 @@ on:
         type: boolean
         default: false
         required: true
+  push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
