--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -57,8 +57,7 @@ jobs:
       - name: Install packages to test only pyFV3
         if: ${{ ! inputs.ndsl_trigger }}
         run : |
-          cd ${GITHUB_WORKSPACE} && pwd && ls  -l #pyFV3
-          mv ${GITHUB_WORKSPACE}/${{github.event.repository.name}} pyFV3
+          mv ${GITHUB_WORKSPACE}/${{github.event.repository.name}} ${GITHUB_WORKSPACE}/pyFV3
           cd pyFV3
           pip install .[ndsl,test]
 
