--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -18,6 +18,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  github_repository: ${{github.event.repository.name}}
+
 jobs:
   all_tests:
     runs-on: ubuntu-latest
@@ -37,13 +40,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          path: ${{github.event.repository.name}}
+          path: ${{env.github_repository}}
 
       - name: mv NDSL to pyFV3 if NDSL triggers test
         if: ${{inputs.ndsl_trigger}}
         run:  |
           cd ${GITHUB_WORKSPACE}
-          mv NDSL pyFV3/NDSL
+          mv ${{env.github_repository}} pyFV3/${{env.github_repository}}
 
       - name: install packages to test NDSL in pyFV3
         if: ${{inputs.ndsl_trigger}}
@@ -55,8 +58,8 @@ jobs:
       - name: Install packages to test only pyFV3
         if: ${{ ! inputs.ndsl_trigger }}
         run : |
-          mv ${GITHUB_WORKSPACE}/${{github.event.repository.name}} ${GITHUB_WORKSPACE}/pyFV3
-          cd pyFV3
+          #mv ${GITHUB_WORKSPACE}/${{github.event.repository.name}} ${GITHUB_WORKSPACE}/pyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           pip install .[ndsl,test]
 
       - name: Prepare test_data
