--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -59,6 +59,7 @@ jobs:
       - name: Install packages to test only pyFV3
         if: ${{ ! inputs.ndsl_trigger }}
         run : |
+          mv ${GITHUB_WORKSPACE}/${{env.github_repository}} ${GITHUB_WORKSPACE}/pyFV3
           cd ${GITHUB_WORKSPACE}/pyFV3
           pip install .[ndsl,test]
 
