--- a/.github/workflows/pyshield_tests.yaml
+++ b/.github/workflows/pyshield_tests.yaml
@@ -5,7 +5,7 @@ on:
       types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
 
 jobs:
-  pyshield_translate_tests
-    uses: mlee03/pySHiELD/.github/workflows/translate.yaml@reusing_workflows
+  pyshield_translate_tests:
+    uses:  mlee03/PySHiELD/.github/workflows/translate.yaml@reusing_workflows
     with:
       fv3_trigger:  true
