--- a/.github/workflows/pace_tests.yaml
+++ b/.github/workflows/pace_tests.yaml
@@ -5,6 +5,6 @@ on:
 
 jobs:
   pace_unit_tests:
-    uses: mlee03/pace/.github/workflows/main_unit_tests.yaml@reusable_workflow
+    uses: NOAA-GFDL/pace/.github/workflows/main_unit_tests.yaml@develop
     with:
       fv3_trigger:  true
