--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -18,7 +18,7 @@ env:
   github_repository: ${{github.event.repository.name}}
 
 jobs:
-  all_tests:
+  pyFV3_translate_tests:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/noaa-gfdl/miniforge:mpich
