--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -1,11 +1,15 @@
-name: "Translate PyFV3 test (subset)"
+name: "Translate pyFV3 test (subset)"
 on:
   workflow_call:
-    inputs:
-      ndsl_trigger:
-        type: boolean
-        default: false
-        required: true
+  inputs:
+    component_trigger:
+      type:  boolean
+      default: false
+      required: false
+    component_name:
+      type: string
+      default: 'None'
+      required: false
   push:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review, labeled, unlabeled]
@@ -15,52 +19,51 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-env:
-  github_repository: ${{github.event.repository.name}}
-
 jobs:
-  all_tests:
+  pyFV3_translate_tests:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/noaa-gfdl/miniforge:mpich
     steps:
 
-      - name: Checkout PyFV3 if NDSL triggers test
-        if: ${{inputs.ndsl_trigger}}
+      - name: Checkout PyFV3 for externally triggered
+        if: ${{inputs.component_trigger}}
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          repository:  noaa-gfdl/PyFV3
-          path: PyFV3
+          repository:  noaa-gfdl/pyFV3
+          path: pyFV3
 
-      - name: Checkout either PyFV3 (!workflow_call) or NDSL (workflow_call)
+      - name: Checkout NDSL for externally triggered
+        if: ${{inputs.component_trigger}}
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          path: ${{env.github_repository}}
+          path: pyFV3/${{inputs.component_name}}
 
-      - name: mv NDSL to PyFV3 if NDSL triggers test
-        if: ${{inputs.ndsl_trigger}}
-        run:  |
-          cd ${GITHUB_WORKSPACE}
-          mv ${{env.github_repository}} PyFV3/.
+      - name: Checkout pyFV3 for interally triggered
+        if: ${{!inputs.component_trigger}}
+        uses: action/checkout@v4
+        with:
+          submodules: 'recursive'
+          path: pyFV3
 
-      - name: install packages to test NDSL in PyFV3
-        if: ${{inputs.ndsl_trigger}}
+      - name: install packages to test NDSL in pyFV3
+        if: ${{inputs.component_trigger}}
         run:  |
-          cd ${GITHUB_WORKSPACE}/PyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           cd NDSL && pip3 install .[test]
           cd .. pip3 install .[test]
 
-      - name: Install packages to test only PyFV3
-        if: ${{ ! inputs.ndsl_trigger }}
+      - name: Install packages to test only pyFV3
+        if: ${{ ! inputs.component_trigger }}
         run : |
-          cd ${GITHUB_WORKSPACE}/PyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           pip install .[ndsl,test]
 
       - name: Prepare test_data
         run: |
-          cd ${GITHUB_WORKSPACE}/PyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           mkdir -p test_data  && cd test_data
           wget https://portal.nccs.nasa.gov/datashare/astg/smt/pace-regression-data/8.1.3_c12_6ranks_standard.tar.gz
           tar -xzvf  8.1.3_c12_6ranks_standard.tar.gz --no-same-owner
@@ -68,7 +71,7 @@ jobs:
 
       - name: Numpy FvTp2d
         run: |
-          cd ${GITHUB_WORKSPACE}/PyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           pytest \
             -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
             --backend=numpy \
@@ -78,7 +81,7 @@ jobs:
 
       - name: Numpy D_SW
         run: |
-         cd ${GITHUB_WORKSPACE}/PyFV3
+         cd ${GITHUB_WORKSPACE}/pyFV3
          pytest \
             -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
             --backend=numpy \
@@ -88,16 +91,17 @@ jobs:
 
       - name: Numpy Remapping
         run: |
-          cd ${GITHUB_WORKSPACE}/PyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           pytest \
             -v -s --data_path=./test_data/8.1.3/c12_6ranks_standard/dycore \
             --backend=numpy \
             --which_modules=Remapping \
             --threshold_overrides_file=./tests/savepoint/translate/overrides/standard.yaml \
             ./tests/savepoint
+
       - name: Orchestrated dace-cpu Acoustics
         run: |
-          cd ${GITHUB_WORKSPACE}/PyFV3
+          cd ${GITHUB_WORKSPACE}/pyFV3
           export FV3_DACEMODE=BuildAndRun
           export PACE_FLOAT_PRECISION=64
           export PACE_TEST_N_THRESHOLD_SAMPLES=0
