--- a/.github/workflows/translate.yaml
+++ b/.github/workflows/translate.yaml
@@ -41,9 +41,9 @@ jobs:
           submodules: 'recursive'
           path: pyFV3/${{inputs.component_name}}
 
-      - name: Checkout pyFV3 for internally triggered
-        if: ${{!inputs.component_trigger}}
-        uses: action/checkout@v4
+      - name: Checkout pyFV3 for interally triggered
+        if: ${{ ! inputs.component_trigger }}
+        uses: actions/checkout@v4
         with:
           submodules: 'recursive'
           path: pyFV3
